Endpoint to block the user
